# ssh-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STATE.md  servers.example.json
installer/: ssh-tool.iss
resources/: app.qrc  ssh-tool.manifest  ssh-tool.rc
src/: connectionsdialog.cpp  connectionsdialog.h  editorwindow.cpp  editorwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  serverconfig.cpp  serverconfig.h  sftpmodel.cpp  sftpmodel.h  sshsession.cpp  sshsession.h  syntaxhighlighter.cpp  syntaxhighlighter.h  terminalwidget.cpp  terminalwidget.h
